ArcGIS and SDMX port to jdk11 (#3322)
* - Added concurrency as a user-settable parameter to the datastore

* - Upgraded dependency to SDMX 2.3.4 release

* [AUR-6940] Porting of GeoTools ArcGIS ReST API and SDMX modules to Java 11
- Upgraded PowerMock
- Changed factories to reflect changes in DataStoreFactorySpi
- Allowed protected classes introspection during testing

* Made SDMX and ArcGIS modules work with both Java 8 and Java 11
- Changed profile activation so that two can be active at the same time