@@ -39,8 +39,8 @@
     </developers>
 
     <properties>
-        <powermock.version>1.6.6</powermock.version>
-        <mockito.version>1.10.19</mockito.version>
+        <powermock.version>2.0.9</powermock.version>
+        <additional-switches></additional-switches>
     </properties>
 
     <repositories>
@@ -93,14 +93,7 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -111,32 +104,32 @@
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito</artifactId>
+            <artifactId>powermock-api-mockito2</artifactId>
             <version>${powermock.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-cql</artifactId>
-            <version>23-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.ws</groupId>
+            <artifactId>jaxws-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
+
     <profiles>
+
         <profile>
             <id>generateschema</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
-                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.jsonschema2pojo</groupId>
@@ -185,22 +178,23 @@
         <profile>
             <id>integrationtest</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>!systemtest</name>
+                </property>
             </activation>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
-                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
+                            <argLine>
+                                ${additional-switches}
+                            </argLine>
                             <includes>
                                 <include>**/*Test.java</include>
                             </includes>
@@ -216,17 +210,15 @@
         <profile>
             <id>systemtest</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>systemtest</name>
+                </property>
             </activation>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
-                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -240,6 +232,17 @@
                 </plugins>
             </build>
         </profile>
+
+        <profile>
+            <id>java11</id>
+            <properties>
+                <additional-switches>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED</additional-switches>
+            </properties>
+            <activation>
+                <jdk>11</jdk>
+            </activation>
+        </profile>
+
     </profiles>
 
 </project>
